k8s/course-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  labels:
    app: course-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      labels:
        app: course-service
    spec:
      containers:
      - name: course-service
        image: us-central1-docker.pkg.dev/edutrack-cc-ass-2/edutrack-docker-repo/course-service:v1.0.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: db-password-volume
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: db-password-volume
        secret:
          secretName: course-db-password-secret
          items:
          - key: db_password
            path: db_password
