k8s/student-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service
        image: us-central1-docker.pkg.dev/edutrack-cc-ass-2/edutrack-docker-repo/student-service:v1.0.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: db-password-volume
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: db-password-volume
        secret:
          secretName: student-db-password-secret # Reference the new Kubernetes Secret
          items:
          - key: db_password
            path: db_password # Mounts the 'db_password' key as a file named 'db_password'
